--- a/cmd/frontend/helpers/email/templates/forgot1.gohtml
+++ b/cmd/frontend/helpers/email/templates/forgot1.gohtml
@@ -1,7 +1,7 @@
 {{define "forgot1"}}
     {{ template "header" . }}
 
-    <p>You or someone else has requested a new password for Game DB</p>
+    <p>You or someone else has requested a new password for Global Steam</p>
     <p><strong>If this was not you, please ignore this email.</strong></p>
     <p>Click the following link to reset your password: {{ .Domain }}/forgot/reset?code={{ .Code }}</p>
 
