--- a/cmd/frontend/helpers/email/templates/forgot2.gohtml
+++ b/cmd/frontend/helpers/email/templates/forgot2.gohtml
@@ -1,7 +1,7 @@
 {{define "forgot2"}}
     {{ template "header" . }}
 
-    <p>Your new Game DB password is: <strong>{{ .Password }}</strong></p>
+    <p>Your new Global Steam password is: <strong>{{ .Password }}</strong></p>
 
     {{ template "footer" . }}
 {{end}}
