--- a/cmd/frontend/helpers/email/templates/signup.gohtml
+++ b/cmd/frontend/helpers/email/templates/signup.gohtml
@@ -1,7 +1,7 @@
 {{define "signup"}}
     {{ template "header" . }}
 
-    <p>Welcome to Game DB</p>
+    <p>Welcome to Global Steam</p>
     <p>Please check out the following:</p>
     <ul>
         <li><a href="https://twitter.com/gamedb_online">Twitter</a></li>
