--- a/cmd/frontend/templates/badge.gohtml
+++ b/cmd/frontend/templates/badge.gohtml
@@ -37,7 +37,7 @@
                         {{ if gt .Badge.PlayerID 0 }}
 
                             {{ if gt .PlayerLevel 0}}
-                                Your achieved level <strong>{{ comma .PlayerLevel }}</strong> on <strong>{{ .PlayerTime }}</strong> and are ranked <strong>{{ .PlayerRank }}</strong> on Game DB!
+                                Your achieved level <strong>{{ comma .PlayerLevel }}</strong> on <strong>{{ .PlayerTime }}</strong> and are ranked <strong>{{ .PlayerRank }}</strong> on Global Steam!
                             {{ else }}
                                 You have not crafted this badge.
                             {{ end }}
