--- a/cmd/frontend/templates/bundle.gohtml
+++ b/cmd/frontend/templates/bundle.gohtml
@@ -37,11 +37,11 @@
 
                         </tr>
                         <tr>
-                            <th scope="row" nowrap="nowrap" class="thin">First seen on Game DB</th>
+                            <th scope="row" nowrap="nowrap" class="thin">First seen on Global Steam</th>
                             <td>{{ .Bundle.GetCreatedNice }}</td>
                         </tr>
                         <tr>
-                            <th scope="row" nowrap="nowrap" class="thin">Updated on Game DB</th>
+                            <th scope="row" nowrap="nowrap" class="thin">Updated on Global Steam</th>
                             <td>{{ .Bundle.GetUpdatedNice }}</td>
                         </tr>
                     </table>
