--- a/cmd/frontend/templates/donate.gohtml
+++ b/cmd/frontend/templates/donate.gohtml
@@ -80,7 +80,7 @@
                                         <td><i class="fas fa-star text-warning"></i> App Change Webhooks</td>
                                     </tr>
                                     <tr>
-                                        <td><i class="fas fa-star text-warning"></i> Influence the Game DB roadmap</td>
+                                        <td><i class="fas fa-star text-warning"></i> Influence the Global Steam roadmap</td>
                                     </tr>
                                 </table>
                             </div>
