--- a/cmd/frontend/templates/home.gohtml
+++ b/cmd/frontend/templates/home.gohtml
@@ -1,12 +1,12 @@
 {{define "home"}}
     {{ template "header" . }}
 
-    <link href="https://fonts.googleapis.com/css?family=Audiowide&display=fallback&text=Game DB" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Audiowide&display=fallback&text=Global Steam" rel="stylesheet">
 
     <div class="container" id="home-page">
 
         <div id="hero">
-            <h1>Game DB</h1>
+            <h1>Global Steam</h1>
         </div>
 
         {{ template "flashes" . }}
@@ -17,7 +17,7 @@
         {{/*                    <span aria-hidden="true">&times;</span>*/}}
         {{/*                </button>*/}}
         {{/*                <p class="mb-0">*/}}
-        {{/*                    Welcome to Game DB. We gather all the public information we can from Steam.*/}}
+        {{/*                    Welcome to Global Steam. We gather all the public information we can from Steam.*/}}
         {{/*                    We then use this to show statistics on players and games etc.</p>*/}}
         {{/*            </div>*/}}
         {{/*        {{ end }}*/}}
