--- a/cmd/frontend/templates/includes/footer.gohtml
+++ b/cmd/frontend/templates/includes/footer.gohtml
@@ -3,7 +3,7 @@
     <footer>
         <div class="container">
             <small class="text-muted text-center">
-                Game DB is not affiliated with Steam.
+                Global Steam is not affiliated with Steam.
                 All copyrights reserved to their respective owners.
                 <a href="/terms">Terms of Service</a>.
                 Version <a href="/commits">{{ .GetCommits }} Beta</a>.
