--- a/cmd/frontend/templates/includes/header.gohtml
+++ b/cmd/frontend/templates/includes/header.gohtml
@@ -23,8 +23,8 @@
     <link rel="mask-icon" href="/assets/img/safari-pinned-tab.svg" color="#343a40">
     <link rel="shortcut icon" href="/assets/img/sa-bg-48x48.ico">
 
-    <meta name="apple-mobile-web-app-title" content="Game DB">
-    <meta name="application-name" content="Game DB">
+    <meta name="apple-mobile-web-app-title" content="Global Steam">
+    <meta name="application-name" content="Global Steam">
     <meta name="msapplication-TileColor" content="#343a40">
     <meta name="msapplication-config" content="/browserconfig.xml">
     <meta name="theme-color" content="#343a40">
@@ -71,11 +71,11 @@
     <meta property="fb:app_id" content="2539079269452708">
     <meta property="og:url" content="{{ .GetCanonical }}">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Game DB">
+    <meta property="og:title" content="Global Steam">
     <meta property="og:image" content="{{ .GetMetaImage }}">
     <meta property="og:image:alt" content="{{ .Title }}">
     <meta property="og:description" content="{{ .Description }}">
-    <meta property="og:site_name" content="Game DB">
+    <meta property="og:site_name" content="Global Steam">
     <meta property="og:locale" content="en_US">
     <meta property="article:author" content="jimeagle">
 
@@ -108,7 +108,7 @@
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-dark">
             <a class="navbar-brand" href="/">
-                <img src="/assets/img/sa-500x500.png" alt="Game DB">
+                <img src="/assets/img/sa-500x500.png" alt="Global Steam">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-label="Toggle">
                 <span class="navbar-toggler-icon"></span>
@@ -209,7 +209,7 @@
                         <div class="dropdown-menu">
 
                             <a class="dropdown-item" href="/stats">Steam</a>
-                            <a class="dropdown-item" href="/stats/gamedb">Game DB</a>
+                            <a class="dropdown-item" href="/stats/gamedb">Global Steam</a>
 
                             <div class="dropdown-divider"></div>
 
@@ -226,7 +226,7 @@
                         <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">More</a>
                         <div class="dropdown-menu">
 
-                            <a class="dropdown-item" href="/api/gamedb">API Docs (Game DB)</a>
+                            <a class="dropdown-item" href="/api/gamedb">API Docs (Global Steam)</a>
                             <a class="dropdown-item" href="/api/steam">API Docs (Steam)</a>
 
                             <div class="dropdown-divider"></div>
