--- a/cmd/frontend/templates/info.gohtml
+++ b/cmd/frontend/templates/info.gohtml
@@ -13,12 +13,12 @@
             <div class="card-body">
 
                 <div class="card mb-3">
-                    <h5 class="card-header">Game DB</h5>
+                    <h5 class="card-header">Global Steam</h5>
                     <div class="card-body pl-0">
                         <ul class="mb-0">
-                            <li>Game DB has been my hobby since 2015.</li>
-                            <li>Game DB is fully open sourced on <a href="https://github.com/gamedb" target="_blank" rel="noopener">GitHub</a>.</li>
-                            <li>Game DB gets all of its data from <a href="/steam-api">Steam APIs</a>, or <a href="https://github.com/SteamRE/SteamKit" target="_blank" rel="noopener">Steam PICS</a>.</li>
+                            <li>Global Steam has been my hobby since 2015.</li>
+                            <li>Global Steam is fully open sourced on <a href="https://github.com/gamedb" target="_blank" rel="noopener">GitHub</a>.</li>
+                            <li>Global Steam gets all of its data from <a href="/steam-api">Steam APIs</a>, or <a href="https://github.com/SteamRE/SteamKit" target="_blank" rel="noopener">Steam PICS</a>.</li>
                         </ul>
                     </div>
                 </div>
@@ -28,7 +28,7 @@
                     <div class="card-body pl-0">
                         <ul class="mb-0">
                             <li>Players are updated when they are looked at, or automatically for donators.</li>
-                            <li>Player ranks are calculated only from players on Game DB.</li>
+                            <li>Player ranks are calculated only from players on Global Steam.</li>
                             <li>Player ranks are calculated started at midnight UTC and can take some time to finish processing.</li>
                         </ul>
                     </div>
