--- a/cmd/frontend/helpers/email/templates/_header.gohtml
+++ b/cmd/frontend/helpers/email/templates/_header.gohtml
@@ -1,8 +1,8 @@
 {{define "header"}}
 
     <h2>
-        <img src="https://gamedb.online/assets/img/sa-500x500.png" alt="Game DB" style="height: 30px; vertical-align: middle;" height="30">
-        Game DB
+        <img src="https://gamedb.online/assets/img/sa-500x500.png" alt="Global Steam" style="height: 30px; vertical-align: middle;" height="30">
+        Global Steam
     </h2>
 
 {{end}}
