--- a/cmd/frontend/templates/commits.gohtml
+++ b/cmd/frontend/templates/commits.gohtml
@@ -5,7 +5,7 @@
 
         <div class="jumbotron">
             <h1><i class="fab fa-github"></i> Commits</h1>
-            <p class="lead">Game DB is fully open sourced on <a href="https://github.com/gamedb" target="_blank" rel="noopener">GitHub</a>.</p>
+            <p class="lead">Global Steam is fully open sourced on <a href="https://github.com/gamedb" target="_blank" rel="noopener">GitHub</a>.</p>
         </div>
 
         {{ template "flashes" . }}
