--- a/cmd/frontend/templates/error.gohtml
+++ b/cmd/frontend/templates/error.gohtml
@@ -10,7 +10,7 @@
     <div class="container" id="error-page">
 
         <div class="oldschool">
-            <h1 class="window-title">Game DB</h1>
+            <h1 class="window-title">Global Steam</h1>
             <div>
                 <h2>{{ .Title }}</h2>
                 <p>{{ .Message }}</p>
