--- a/cmd/frontend/templates/includes/stats_header.gohtml
+++ b/cmd/frontend/templates/includes/stats_header.gohtml
@@ -8,7 +8,7 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link {{if startsWith .Path "/stats/gamedb" }}active{{end}}" href="/stats/gamedb" role="tab"><i class="fas fa-chart-bar"></i> Game DB</a>
+                <a class="nav-link {{if startsWith .Path "/stats/gamedb" }}active{{end}}" href="/stats/gamedb" role="tab"><i class="fas fa-chart-bar"></i> Global Steam</a>
             </li>
 
             <li class="nav-item">
