Fix hero link on windows

--- a/cmd/frontend/assets/sass/_global.scss
+++ b/cmd/frontend/assets/sass/_global.scss
@@ -37,6 +37,7 @@ body.bg {
         height: 620px;
         width: 100%;
         display: block;
+        pointer-events: none;
 
         background-color: #1b2738;
         background-position-x: center;
