--- a/cmd/frontend/templates/player.gohtml
+++ b/cmd/frontend/templates/player.gohtml
@@ -556,6 +556,15 @@
                     {{/* Wishlist */}}
                     <div class="tab-pane" id="wishlist" role="tabpanel">
 
+                        <div class="jumbotron bottom mb-3">
+                            <h1><i class="fas fa-info"></i></h1>
+                            <div>
+                                {{/*Visit the <a href="/games#wishlists">apps</a> page to see what apps are the most wished for.<br/>*/}}
+                                Reorder your wishlist on the <a href="https://store.steampowered.com/wishlist" target="_blank" rel="noopener">Steam Commity Page</a>.<br/>
+                                Ranks with a dash are newly added and unranked.
+                            </div>
+                        </div>
+
                         <div class="row">
                             <div class="col-6 col-md-4 col-lg-3 mb-3">
                                 <div role="button" class="btn btn-success btn-block mb-0">Total Cost<br/>
@@ -578,15 +587,6 @@
                                 <tbody>
                                 </tbody>
                             </table>
-                        </div>
-
-                        <div class="jumbotron bottom mt-3">
-                            <h1><i class="fas fa-info"></i></h1>
-                            <div>
-                                {{/*Visit the <a href="/games#wishlists">apps</a> page to see what apps are the most wished for.<br/>*/}}
-                                Reorder your wishlist on the <a href="https://store.steampowered.com/wishlist" target="_blank" rel="noopener">Steam Commity Page</a>.<br/>
-                                Ranks with a dash are newly added and unranked.
-                            </div>
                         </div>
 
                     </div>
