Show primaries on groups

--- a/cmd/frontend/templates/group.gohtml
+++ b/cmd/frontend/templates/group.gohtml
@@ -38,6 +38,12 @@
                     <div class="alert alert-danger" role="alert">{{ .Group.Error }}</div>
                 {{ end }}
 
+                <div class="row">
+                    <div class="col-6 col-md-4 col-lg-3 mb-3">
+                        <div role="button" class="btn btn-success btn-block mb-0">Primaries<br/>{{ comma .Group.Primaries }}</div>
+                    </div>
+                </div>
+
                 <div class="card mb-4">
                     <h5 class="card-header">Members</h5>
                     <div class="card-body">
