Fix dropdown position

--- a/cmd/frontend/templates/includes/header.gohtml
+++ b/cmd/frontend/templates/includes/header.gohtml
@@ -272,7 +272,7 @@
 
                     <li class="nav-item dropdown {{ if .IsSettingsPage }}active{{end}}">
                         <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">{{ if .PlayerName }}{{ .PlayerName }}{{ else }}Account{{ end }}</a>
-                        <div class="dropdown-menu">
+                        <div class="dropdown-menu dropdown-menu-right">
 
                             {{ if .IsLoggedIn }}
 
