--- a/cmd/frontend/templates/app.gohtml
+++ b/cmd/frontend/templates/app.gohtml
@@ -441,9 +441,11 @@
                                         <table class="table table-no-border table-sm mb-0">
                                             <tbody>
                                             {{  range $key, $val:= .Countries }}
-                                                <tr class="{{ if gt $key 13 }}d-none{{ end }}" style="background: linear-gradient(to right, #28a74522 {{ .Percent }}%, transparent {{ .Percent }}%)">
+                                                <tr style="background: linear-gradient(to right, #28a74522 {{ .Percent }}%, transparent {{ .Percent }}%)">
                                                     <td>{{ .Country }}</td>
-                                                    <td>{{ .GetPercent }}<small>%</small></td>
+                                                    <td data-toggle="tooltip" data-placement="left" title="{{ comma .Count }} Global Steam players">
+                                                        {{ .GetPercent }}<small>%</small>
+                                                    </td>
                                                 </tr>
                                             {{ end }}
                                             </tbody>
