Add globe to Home

--- a/cmd/frontend/templates/home.gohtml
+++ b/cmd/frontend/templates/home.gohtml
@@ -6,7 +6,7 @@
     <div class="container" id="home-page">
 
         <div id="hero">
-            <h1>Global Steam</h1>
+            <h1>Global <i class="fas fa-globe-americas"></i> Steam</h1>
         </div>
 
         {{ template "flashes" . }}
