--- a/cmd/frontend/templates/player.gohtml
+++ b/cmd/frontend/templates/player.gohtml
@@ -245,7 +245,7 @@
                                             {{ else }}
                                                 <table>
                                                     <tr>
-                                                        <td><h6>Unranked</h6></td>
+                                                        <td><h6>Private / Unranked</h6></td>
                                                     </tr>
                                                     <tr>
                                                         <td><h6>&nbsp;</h6></td>
