--- a/cmd/frontend/templates/includes/players_header.gohtml
+++ b/cmd/frontend/templates/includes/players_header.gohtml
@@ -12,6 +12,7 @@
                 <li class="nav-item"><a class="nav-link" href="/players#bans" role="tab"><i class="fas fa-users"></i> Bans</a></li>
                 <li class="nav-item"><a class="nav-link" href="/players#profile" role="tab"><i class="fas fa-users"></i> Profile</a></li>
                 <li class="nav-item"><a class="nav-link" href="/players#achievements" role="tab"><i class="fas fa-users"></i> Achievements</a></li>
+                <li class="nav-item"><a class="nav-link" href="/players#awards" role="tab"><i class="fas fa-users"></i> Awards</a></li>
 
                 <li class="nav-item ml-auto"><span class="nav-link active" role="tab"><i class="fas fa-plus-circle"></i> Add Player</span></li>
 
@@ -22,6 +23,7 @@
                 <li class="nav-item"><a class="nav-link" href="#bans" role="tab"><i class="fas fa-users"></i> Bans</a></li>
                 <li class="nav-item"><a class="nav-link" href="#profile" role="tab"><i class="fas fa-users"></i> Profile</a></li>
                 <li class="nav-item"><a class="nav-link" href="#achievements" role="tab"><i class="fas fa-users"></i> Achievements</a></li>
+                <li class="nav-item"><a class="nav-link" href="#awards" role="tab"><i class="fas fa-users"></i> Awards</a></li>
 
                 <li class="nav-item ml-auto"><a class="nav-link" href="/players/add" role="tab"><i class="fas fa-plus-circle"></i> Add Player</a></li>
 
