--- a/cmd/frontend/templates/players.gohtml
+++ b/cmd/frontend/templates/players.gohtml
@@ -83,6 +83,10 @@
                             <th scope="col">Achievements</th>
                             <th scope="col">Completed</th>
                             <th scope="col">Foils</th>
+                            <th scope="col">Given Count</th>
+                            <th scope="col">Given Points</th>
+                            <th scope="col">Received Count</th>
+                            <th scope="col">Received Points</th>
                             {{/* Below two must be last */}}
                             <th scope="col"><i class="fas fa-link"></i></th>
                             <th scope="col">Search Score</th>
