--- a/cmd/frontend/templates/badges.gohtml
+++ b/cmd/frontend/templates/badges.gohtml
@@ -99,7 +99,7 @@
                             </table>
                         </div>
 
-                        <div class="jumbotron bottom mt-3">
+                        <div class="jumbotron bottom mb-0 mt-3">
                             <h1><i class="fas fa-info"></i></h1>
                             <div><strong>What are Foil Trading Cards?</strong>
                                 There is a small chance whenever you get a Trading Card from playing a game that it will have a special foil border.
@@ -143,7 +143,7 @@
                             </table>
                         </div>
 
-                        <div class="jumbotron bottom mt-3">
+                        <div class="jumbotron bottom mb-0 mt-3">
                             <h1><i class="fas fa-info"></i></h1>
                             <div><strong>What are Foil Trading Cards?</strong>
                                 There is a small chance whenever you get a Trading Card from playing a game that it will have a special foil border.
