--- a/cmd/frontend/templates/new_releases.gohtml
+++ b/cmd/frontend/templates/new_releases.gohtml
@@ -63,7 +63,7 @@
             </div>
         </div>
 
-        <div class="jumbotron bottom mt-3">
+        <div class="jumbotron bottom mb-0 mt-3">
             <h1><i class="fas fa-info"></i></h1>
             <div>We are only able to show apps that have their release date in a format we can read, so there may be some missing.</div>
         </div>
