--- a/cmd/frontend/templates/player.gohtml
+++ b/cmd/frontend/templates/player.gohtml
@@ -377,7 +377,7 @@
                             </table>
                         </div>
 
-                        <div class="jumbotron bottom mt-3">
+                        <div class="jumbotron bottom mb-0 mt-3">
                             <h1><i class="fas fa-info"></i></h1>
                             <div>Groups that we don't know about might take longer to show up.</div>
                         </div>
