--- a/cmd/frontend/templates/sales.gohtml
+++ b/cmd/frontend/templates/sales.gohtml
@@ -163,7 +163,7 @@
                     </table>
                 </div>
 
-                <div class="jumbotron bottom mt-3">
+                <div class="jumbotron bottom mb-0 mt-3">
                     <h1><i class="fas fa-info"></i></h1>
                     <div>* Finish time is estimate</div>
                 </div>
