--- a/cmd/frontend/templates/upcoming.gohtml
+++ b/cmd/frontend/templates/upcoming.gohtml
@@ -51,7 +51,7 @@
                     </table>
                 </div>
 
-                <div class="jumbotron bottom mt-3">
+                <div class="jumbotron bottom mb-0 mt-3">
                     <h1><i class="fas fa-info"></i></h1>
                     <div>We are only able to show apps that have their release date in a format we can read, so there may be some missing.</div>
                 </div>
