Remove old players link

--- a/cmd/frontend/templates/app.gohtml
+++ b/cmd/frontend/templates/app.gohtml
@@ -451,10 +451,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <small class="card-footer">
-                                        From Global Steam players
-                                        <span class="show-more float-right cursor-pointer">Show More</span>
-                                    </small>
+                                    <small class="card-footer">From Global Steam players</small>
                                 </div>
 
                             </div>
