--- a/cmd/frontend/templates/chat_bot.gohtml
+++ b/cmd/frontend/templates/chat_bot.gohtml
@@ -16,12 +16,11 @@
 
         <div class="card mb-4">
             <div class="card-body">
-                <p class="mb-0">All commands can start with a full stop <code>.</code> or an exclamation point <code>!</code></p>
-            </div>
-        </div>
 
-        <div class="card mb-4">
-            <div class="card-body">
+                <div class="jumbotron bottom mb-3">
+                    <h1><i class="fas fa-info"></i></h1>
+                    <div>For slash command integration, you will need to add the bot to your server again, using the link above.</div>
+                </div>
 
                 {{ range $key, $value := .Commands }}
 
