--- a/cmd/frontend/templates/badges.gohtml
+++ b/cmd/frontend/templates/badges.gohtml
@@ -99,8 +99,8 @@
                             </table>
                         </div>
 
-                        <div class="jumbotron bottom mb-0 mt-3">
-                            <h1><i class="fas fa-info"></i></h1>
+                        <div class="jumbotron inline mb-0 mt-3">
+                            <h4><i class="fas fa-info"></i></h4>
                             <div><strong>What are Foil Trading Cards?</strong>
                                 There is a small chance whenever you get a Trading Card from playing a game that it will have a special foil border.
                                 You'll need to collect a set of foil cards in order to craft them into a foil badge.
@@ -143,8 +143,8 @@
                             </table>
                         </div>
 
-                        <div class="jumbotron bottom mb-0 mt-3">
-                            <h1><i class="fas fa-info"></i></h1>
+                        <div class="jumbotron inline mb-0 mt-3">
+                            <h4><i class="fas fa-info"></i></h4>
                             <div><strong>What are Foil Trading Cards?</strong>
                                 There is a small chance whenever you get a Trading Card from playing a game that it will have a special foil border.
                                 You'll need to collect a set of foil cards in order to craft them into a foil badge.
