--- a/cmd/frontend/templates/chat_bot.gohtml
+++ b/cmd/frontend/templates/chat_bot.gohtml
@@ -17,8 +17,8 @@
         <div class="card mb-4">
             <div class="card-body">
 
-                <div class="jumbotron bottom mb-3">
-                    <h1><i class="fas fa-info"></i></h1>
+                <div class="jumbotron inline mb-3">
+                    <h4><i class="fas fa-info"></i></h4>
                     <div>For slash command integration, you will need to add the bot to your server again, using the link above.</div>
                 </div>
 
