--- a/cmd/frontend/templates/player.gohtml
+++ b/cmd/frontend/templates/player.gohtml
@@ -377,8 +377,8 @@
                             </table>
                         </div>
 
-                        <div class="jumbotron bottom mb-0 mt-3">
-                            <h1><i class="fas fa-info"></i></h1>
+                        <div class="jumbotron inline mb-0 mt-3">
+                            <h4><i class="fas fa-info"></i></h4>
                             <div>Groups that we don't know about might take longer to show up.</div>
                         </div>
 
@@ -556,8 +556,8 @@
                     {{/* Wishlist */}}
                     <div class="tab-pane" id="wishlist" role="tabpanel">
 
-                        <div class="jumbotron bottom mb-3">
-                            <h1><i class="fas fa-info"></i></h1>
+                        <div class="jumbotron inline mb-3">
+                            <h4><i class="fas fa-info"></i></h4>
                             <div>
                                 {{/*Visit the <a href="/games#wishlists">apps</a> page to see what apps are the most wished for.<br/>*/}}
                                 Reorder your wishlist on the <a href="https://store.steampowered.com/wishlist" target="_blank" rel="noopener">Steam Commity Page</a>.<br/>
