--- a/cmd/frontend/templates/sales.gohtml
+++ b/cmd/frontend/templates/sales.gohtml
@@ -163,8 +163,8 @@
                     </table>
                 </div>
 
-                <div class="jumbotron bottom mb-0 mt-3">
-                    <h1><i class="fas fa-info"></i></h1>
+                <div class="jumbotron inline mb-0 mt-3">
+                    <h4><i class="fas fa-info"></i></h4>
                     <div>* Finish time is estimate</div>
                 </div>
 
