Revert "Fix template"

--- a/cmd/frontend/templates/includes/header.gohtml
+++ b/cmd/frontend/templates/includes/header.gohtml
@@ -299,11 +299,14 @@
                         </a>
                         <div class="dropdown-menu dropdown-menu-right">
                             {{ range $key, $value:= .ProductCCs }}
-                                <a class="dropdown-item" href="/currency/{{ .ProductCode }}">
-                                    <img src="/assets/img/flags/{{ .GetFlag }}.png" alt="{{ .Name }}">
-                                    {{ .Name }}
-                                </a>
+                                {{ if .Enabled }}
+                                    <a class="dropdown-item" href="/currency/{{ .ProductCode }}">
+                                        <img src="/assets/img/flags/{{ .GetFlag }}.png" alt="{{ .Name }}">
+                                        {{ .Name }}
+                                    </a>
+                                {{ end }}
                             {{ end }}
+                            <span class="dropdown-item">The rest coming soon.</span>
                         </div>
                     </li>
 
