--- a/cmd/frontend/templates/app.gohtml
+++ b/cmd/frontend/templates/app.gohtml
@@ -743,6 +743,13 @@
                     <div class="tab-pane" id="news" role="tabpanel">
 
                         <div class="form-row">
+                            <div class="col-12 col-md-6 col-lg-4">
+                                <div class="form-group">
+                                    <label for="article-feed">Feeds</label>
+                                    <select multiple data-placeholder="Feeds" class="form-control form-control-chosen" id="article-feed" name="article-feed">
+                                    </select>
+                                </div>
+                            </div>
                             <div class="col-12 col-md-6 col-lg-5 col-xl-4 mb-2">
                                 <div class="form-group">
                                     <label for="article-search">Search</label>
