--- a/cmd/frontend/templates/players.gohtml
+++ b/cmd/frontend/templates/players.gohtml
@@ -81,7 +81,7 @@
                             <th scope="col">Friends</th>
                             <th scope="col">Comments</th>
                             <th scope="col">Achievements</th>
-                            <th scope="col">Completed</th>
+                            <th scope="col">100% Completed</th>
                             <th scope="col">Foils</th>
                             <th scope="col">Given Count</th>
                             <th scope="col">Given Points</th>
