--- a/cmd/frontend/templates/admin/tasks.gohtml
+++ b/cmd/frontend/templates/admin/tasks.gohtml
@@ -13,7 +13,7 @@
 
                     <h5>{{ .Title }}</h5>
                     <div class="table-responsive">
-                        <table class="table table-hover table-striped table-datatable table-sm mb-0" data-order='[[3, "asc", 0, "desc"]]' id="actions">
+                        <table class="table table-hover table-striped table-datatable table-sm mb-0" data-order='[[3, "asc"], [0, "desc"]]' id="actions">
                             <thead class="thead-light">
                             <tr>
                                 <th scope="col" style="width: 40%;">Action</th>
