--- a/cmd/frontend/templates/chat_bot.gohtml
+++ b/cmd/frontend/templates/chat_bot.gohtml
@@ -25,7 +25,7 @@
                 <h5>Commands</h5>
 
                 <div class="table-responsive commands-table mb-4">
-                    <table class="table table-hover table-striped table-datatable" data-order='[[0, "asc"], [1, "asc"]]'>
+                    <table class="table table-hover table-striped" id="commands-docs">
                         <thead class="thead-light">
                         <tr>
                             <th scope="col">Category</th>
