Update player columns on home

--- a/cmd/frontend/templates/home.gohtml
+++ b/cmd/frontend/templates/home.gohtml
@@ -167,8 +167,9 @@
                         <h5 class="float-right mb-0">
                             <span class="badge cursor-pointer badge-success" data-sort="level">Level</span>
                             <span class="badge cursor-pointer" data-sort="games">Games</span>
-                            <span class="badge cursor-pointer" data-sort="bans">Bans</span>
-                            <span class="badge cursor-pointer" data-sort="profile">Profile</span>
+                            <span class="badge cursor-pointer" data-sort="awards">Awards</span>
+                            {{/*<span class="badge cursor-pointer" data-sort="bans">Bans</span>*/}}
+                            {{/*<span class="badge cursor-pointer" data-sort="profile">Profile</span>*/}}
                         </h5>
                     </div>
                     <div class="card-body p-0">
