Show apps with same owners

--- a/cmd/frontend/templates/app.gohtml
+++ b/cmd/frontend/templates/app.gohtml
@@ -845,12 +845,14 @@
                     </div>
                     <div class="tab-pane" id="similar" role="tabpanel">
 
-                        <h5>People who own this game also own</h5>
-                        <p class="mb-4">Coming soon</p>
+                        <h5>Similar by owners</h5>
+                        <div class="table-responsive mb-4" id="similar-owners-wrapper">
+                            <i class="fas fa-spinner fa-spin"></i>
+                        </div>
 
                         <h5>Similar by Tag</h5>
-                        <div class="table-responsive" id="similar-wrapper">
-
+                        <div class="table-responsive" id="similar-tags-wrapper">
+                            <i class="fas fa-spinner fa-spin"></i>
                         </div>
 
                     </div>
